
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef long u_short ;
typedef scalar_t__ u_char ;



u_short chksum(u_short *p, int n)
{
 register long sum = 0;

 while(n > 1) {
  sum += *p++;
  n -= 2;
 }

 if(n == 1) sum += *(u_char *)p;

 sum = (sum >> 16) + (sum & 0xffff);
 sum = sum + (sum >> 16);
 return ~sum;
}
